Comentado los notebook de python y refactorizado código tambien

--- a/python/Rastreador de componentes y eventos.ipynb
+++ b/python/Rastreador de componentes y eventos.ipynb
@@ -21,7 +21,8 @@
     "import csv\n",
     "import tkinter as tk\n",
     "import json\n",
-    "import re"
+    "import re\n",
+    "import os"
    ]
   },
   {
@@ -50,9 +51,12 @@
     "root.withdraw()\n",
     "root.call('wm', 'attributes', '.', '-topmost', True)\n",
     "\n",
-    "csvFiles = filedialog.askopenfilename(multiple=True,filetypes=[(\"Ficheros CSV\",\".csv\")],title=\"Selecciona los ficheros CSV\")\n",
+    "csvFiles = filedialog.askopenfilename(multiple=True,\n",
+    "                                      filetypes=[(\"Ficheros CSV\",\".csv\")],\n",
+    "                                      title=\"Selecciona los ficheros CSV\")\n",
     "\n",
-    "jsonFile=filedialog.askopenfilename(filetypes=[(\"Fichero JSON\",\".json\")],title=\"Selecciona el fichero JSON donde se guarda datos anteriores, si no tienes dale a cancelar\")\n",
+    "jsonFile=filedialog.askopenfilename(filetypes=[(\"Fichero JSON\",\".json\")],\n",
+    "                                    title=\"Selecciona el fichero JSON donde se guarda datos anteriores, si no tienes dale a cancelar\")\n",
     "\n",
     "%gui tk"
    ]
@@ -61,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Carga del fichero JSON\n",
+    "# Datos de ficheros CSV y fichero JSON seleccionados\n",
     "Cargamos el fichero JSON seleccionado en la anterior ventana, si no se ha seleccionado ninguno creamos un nuevo diccionario."
    ]
   },
@@ -72,11 +76,15 @@
    "outputs": [],
    "source": [
     "#Cargamos los componentes y eventos si se ha seleccionado fichero json\n",
-    "\n",
+    "print(\"Path de los ficheros csv: \")\n",
+    "for f in csvFiles:\n",
+    "    print(\"\\t\",f)\n",
     "if len(jsonFile)==0:\n",
     "    print(\"No se ha seleccionado un fichero JSON, se crea una nueva estructura de datos.\")\n",
+    "    firstSize=0\n",
     "    CM={}\n",
     "else:\n",
+    "    firstSize = os.stat(jsonFile).st_size\n",
     "    with open(jsonFile,\"r\",encoding=\"utf-8\") as file:\n",
     "        CM=json.load(file)\n",
     "        print(\"Cargado el JSON\", jsonFile)"
@@ -96,7 +104,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -105,6 +112,7 @@
     "    with open(csvFile,encoding='utf-8') as file:\n",
     "        reader = csv.DictReader(file, delimiter=',') #Lector de CSV con acceso a una columna por el nombre de encabezado\n",
     "        #reader=csv.reader(file, delimiter=',') #Lector de CSV con acceso a una comlmna a traves del indice.\n",
+    "        print(\"Parseando: \",csvFile)\n",
     "        for row in reader:\n",
     "            ''' #Descomentar si se quiere usar para cualquier idioma\n",
     "            component=row[4]#Se supone que el componente sencuentra por la cuarta columna empezando por 0\n",
@@ -123,10 +131,6 @@
     "            descriptions=CM.setdefault(component,{}).setdefault(event,[]) \n",
     "            if(descripNotNumber not in descriptions):\n",
     "                descriptions.append(descripNotNumber)\n",
-    "                if len(descriptions)>1:\n",
-    "                    print(\"Componente y evento con varias descripciones diferentes:\")\n",
-    "                    print(\"\\tComponent: \",component,\"\\tEvent:\",event,\"\\tDescriptions: \",descriptions)\n",
-    "                    print()\n",
     "            "
    ]
   },
@@ -151,8 +155,35 @@
     "filename=  jsonFile if len(jsonFile)>0 else \"Componentes y eventos.json\" \n",
     "with open(filename, 'w',encoding='utf-8' ) as f:\n",
     "    json.dump( CM, f,indent=4,sort_keys=True,ensure_ascii=False )\n",
-    "    print(\"Guardado como JSON\", filename)"
+    "    print(\"Guardado como JSON\", filename)\n",
+    "afterSize=os.stat(filename).st_size"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tamaño del fichero JSON antes y despúes de actualizar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Tamaño del JSON antes de actualizar:\\t\",firstSize,\"bytes\")\n",
+    "print(\"Tamaño del JSON después de actualizar:\\t\",afterSize,\"bytes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
