--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -27,6 +27,7 @@ label.of=de
 label.loadingqualifier=Generando el calificador del curso... (Este proceso puede tardar unos minutos)
 label.loadingstats=Generando estadisticas...
 label.updatinglog=Actualizando log...
+label.savelocal=Guardando en local...
 
 
 error.nocourse=Debe seleccionar un curso.
@@ -49,7 +50,7 @@ label.rol=Rol:
 label.type=Tipo:
 label.filter=Filtro...
 label.componentorevent=Componente\nEvento
-label.participants=Participantes:
+label.participants=Participantes: 
 label.categoryitem=Categoría/Item:
 label.component=Componente: 
 btn.group=Grupo
