--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -26,6 +26,7 @@ label.of=of
 label.loadingqualifier=Generating course qualifier... (This process may take some time)
 label.loadingstats=Generating statistics...
 label.updatinglog=Updating log...
+label.savelocal=Saving in local...
 
 error.nocourse=You have to select a course.
 
@@ -47,7 +48,7 @@ label.rol=Rol:
 label.type=Type:
 label.filter=Filter...
 label.event=Event: 
-label.participants=Participants:
+label.participants=Participants: 
 label.categoryitem=Category/Item:
 label.component=Component: 
 label.componentorevent=Component\nEvent
