--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -10,6 +10,9 @@ checkbox.updatedata=Update data
 btn.enter=Enter
 btn.clear=Clear
 
+component.component_not_available=Component not available
+eventname.event_not_available=Event not available
+
 error.fields=You have to complete all the fields.
 error.host=Can't connect with host.
 error.login=Wrong Username or password.
@@ -89,16 +92,22 @@ chartlabel.thirdquartile=Third Quartile
 chartlabel.atypicalValue=Atypical Value
 chart.mean=Mean
 
-component.component_not_available=Component not available
-eventname.event_not_available=Event not available
+
 
 
 component.activity_report=Activity report
 component.assignment=Assignment
+component.book=Book
+component.book_printing=Book printing
 component.chat=Chat
 component.choice=Choice
+component.comments=Comments
+component.course_completion=Course completion
 component.course_participation=Course participation
+component.database=Database
+component.event_monitor=Event monitor
 component.excel_spreadsheet=Excel spreadsheet
+component.external_tool=External tool
 component.feedback=Feedback
 component.file=File
 component.file_submissions=File submissions
@@ -106,48 +115,71 @@ component.folder=Folder
 component.forum=Forum
 component.glossary=Glossary
 component.grader_report=Grader report
-component.guia_docente=Guía docente
-component.hotpot_module=Hotpot module
+component.guia_docente=Guía Docente
+component.hotpot_module=HotPot module
+component.ims_content_package=IMS content package
+component.journal=Journal
+component.lesson=Lesson
 component.live_logs=Live logs
 component.logs=Logs
 component.online_text_submissions=Online text submissions
-component.opendocument_spreadsheet=Opendocument spreadsheet
+component.opendocument_spreadsheet=OpenDocument spreadsheet
 component.outcomes_report=Outcomes report
 component.overview_report=Overview report
 component.page=Page
 component.plain_text_file=Plain text file
 component.quiz=Quiz
 component.recycle_bin=Recycle bin
+component.scorm_package=SCORM package
 component.single_view=Single view
+component.statistics=Statistics
 component.submission_comments=Submission comments
+component.survey=Survey
 component.system=System
-component.turnitin_assignment_2=Turnitin assignment 2
-component.url=Url
+component.turnitin_assignment_2=Turnitin Assignment 2
+component.url=URL
 component.user_report=User report
 component.user_tours=User tours
 component.wiki=Wiki
 component.workshop=Workshop
-component.xml_file=Xml file
+component.xml_file=XML file
+
 
 eventname.activity_report_viewed=Activity report viewed
-eventname.add_submission=Add submission
+eventname.add_submission=Add Submission
 eventname.all_the_submissions_are_being_downloaded=All the submissions are being downloaded.
+eventname.an_extension_has_been_granted=An extension has been granted.
 eventname.an_online_text_has_been_uploaded=An online text has been uploaded.
+eventname.assessment_evaluated=Assessment evaluated
 eventname.assignment_override_created=Assignment override created
 eventname.assignment_override_deleted=Assignment override deleted
 eventname.assignment_override_updated=Assignment override updated
 eventname.a_file_has_been_uploaded=A file has been uploaded.
 eventname.a_submission_has_been_submitted=A submission has been submitted.
+eventname.a_submission_has_been_uploaded=A submission has been uploaded.
 eventname.badge_listing_viewed=Badge listing viewed
+eventname.book_printed=Book printed
 eventname.calendar_event_created=Calendar event created
 eventname.calendar_event_deleted=Calendar event deleted
 eventname.calendar_event_updated=Calendar event updated
+eventname.calendar_subscription_updated=Calendar subscription updated
+eventname.category_has_been_created=Category has been created
+eventname.chapter_created=Chapter created
+eventname.chapter_updated=Chapter updated
+eventname.chapter_viewed=Chapter viewed
 eventname.choice_answer_added=Choice answer added
+eventname.choice_made=Choice made
 eventname.choice_report_viewed=Choice report viewed
+eventname.comments_viewed=Comments viewed
 eventname.comment_created=Comment created
 eventname.comment_deleted=Comment deleted
+eventname.completion_report_viewed=Completion report viewed
+eventname.content_page_viewed=Content page viewed
 eventname.course_activity_completion_updated=Course activity completion updated
 eventname.course_backup_created=Course backup created
+eventname.course_completed=Course completed
+eventname.course_completion_updated=Course completion updated
+eventname.course_content_deleted=Course content deleted
 eventname.course_created=Course created
 eventname.course_module_created=Course module created
 eventname.course_module_deleted=Course module deleted
@@ -156,8 +188,10 @@ eventname.course_module_updated=Course module updated
 eventname.course_module_viewed=Course module viewed
 eventname.course_reset_ended=Course reset ended
 eventname.course_reset_started=Course reset started
+eventname.course_restored=Course restored
 eventname.course_searched=Course searched
 eventname.course_section_created=Course section created
+eventname.course_section_deleted=Course section deleted
 eventname.course_section_updated=Course section updated
 eventname.course_summary_viewed=Course summary viewed
 eventname.course_updated=Course updated
@@ -166,14 +200,20 @@ eventname.course_viewed=Course viewed
 eventname.discussion_created=Discussion created
 eventname.discussion_deleted=Discussion deleted
 eventname.discussion_moved=Discussion moved
+eventname.discussion_pinned=Discussion pinned
 eventname.discussion_subscription_created=Discussion subscription created
+eventname.discussion_subscription_deleted=Discussion subscription deleted
 eventname.discussion_viewed=Discussion viewed
 eventname.enrolment_instance_created=Enrolment instance created
+eventname.enrolment_instance_updated=Enrolment instance updated
 eventname.entry_has_been_created=Entry has been created
 eventname.entry_has_been_updated=Entry has been updated
 eventname.entry_has_been_viewed=Entry has been viewed
 eventname.evaluation_system_created=Evaluation system created
 eventname.evaluation_system_modified=Evaluation system modified
+eventname.evidence_created=Evidence created.
+eventname.field_created=Field created
+eventname.field_updated=Field updated
 eventname.folder_updated=Folder updated
 eventname.grader_report_viewed=Grader report viewed
 eventname.grade_deleted=Grade deleted
@@ -184,28 +224,46 @@ eventname.grade_user_report_viewed=Grade user report viewed
 eventname.grading_form_viewed=Grading form viewed
 eventname.grading_table_viewed=Grading table viewed
 eventname.grouping_created=Grouping created
+eventname.grouping_deleted=Grouping deleted
+eventname.group_assigned_to_grouping=Group assigned to grouping
 eventname.group_created=Group created
 eventname.group_deleted=Group deleted
 eventname.group_member_added=Group member added
 eventname.group_member_removed=Group member removed
-eventname.hotpot_attempt_started=Hotpot attempt started
-eventname.hotpot_attempt_submitted=Hotpot attempt submitted
+eventname.group_updated=Group updated
+eventname.hotpot_attempt_started=HotPot attempt started
+eventname.hotpot_attempt_submitted=HotPot attempt submitted
 eventname.item_created=Item created
 eventname.item_deleted=Item deleted
-eventname.list_submissions=List submissions
+eventname.item_restored=Item restored
+eventname.journal_entries_viewed=Journal entries viewed
+eventname.journal_entry_created=Journal entry created
+eventname.journal_entry_updated=Journal entry updated
+eventname.lesson_ended=Lesson ended
+eventname.lesson_started=Lesson started
+eventname.list_submissions=List Submissions
 eventname.live_log_report_viewed=Live log report viewed
 eventname.log_report_viewed=Log report viewed
 eventname.message_sent=Message sent
-eventname.opendocument_grade_exported=Opendocument grade exported
+eventname.notes_viewed=Notes viewed
+eventname.note_created=Note created
+eventname.opendocument_grade_exported=OpenDocument grade exported
 eventname.outline_report_viewed=Outline report viewed
 eventname.outstanding_ratings_modified=Outstanding ratings modified
+eventname.page_created=Page created
+eventname.page_moved=Page moved
+eventname.page_updated=Page updated
 eventname.participation_report_viewed=Participation report viewed
+eventname.phase_switched=Phase switched
 eventname.post_created=Post created
 eventname.post_deleted=Post deleted
 eventname.post_updated=Post updated
+eventname.question_answered=Question answered
 eventname.question_category_created=Question category created
 eventname.question_manually_graded=Question manually graded
+eventname.question_viewed=Question viewed
 eventname.quiz_attempt_abandoned=Quiz attempt abandoned
+eventname.quiz_attempt_deleted=Quiz attempt deleted
 eventname.quiz_attempt_preview_started=Quiz attempt preview started
 eventname.quiz_attempt_reviewed=Quiz attempt reviewed
 eventname.quiz_attempt_started=Quiz attempt started
@@ -218,18 +276,39 @@ eventname.quiz_override_created=Quiz override created
 eventname.quiz_override_deleted=Quiz override deleted
 eventname.quiz_report_viewed=Quiz report viewed
 eventname.recent_activity_viewed=Recent activity viewed
+eventname.record_created=Record created
+eventname.record_deleted=Record deleted
+eventname.record_updated=Record updated
 eventname.response_submitted=Response submitted
 eventname.role_assigned=Role assigned
+eventname.role_capabilities_updated=Role capabilities updated
 eventname.role_unassigned=Role unassigned
+eventname.rule_created=Rule created
 eventname.scale_created=Scale created
+eventname.sco_launched=Sco launched
 eventname.sessions_viewed=Sessions viewed
 eventname.some_content_has_been_posted=Some content has been posted.
 eventname.step_shown=Step shown
 eventname.subject_modified=Subject modified
+eventname.submission_assessed=Submission assessed
 eventname.submission_confirmation_form_viewed=Submission confirmation form viewed.
-eventname.submission_created=Submission created.
+eventname.submission_created=Submission created
+eventname.submission_deleted=Submission deleted
 eventname.submission_form_viewed=Submission form viewed.
-eventname.submission_updated=Submission updated.
+eventname.submission_reassessed=Submission re-assessed
+eventname.submission_updated=Submission updated
+eventname.submission_viewed=Submission viewed
+eventname.submitted_scorm_raw_score=Submitted SCORM raw score
+eventname.submitted_scorm_status=Submitted SCORM status
+eventname.subscribers_viewed=Subscribers viewed
+eventname.subscription_created=Subscription created
+eventname.subscription_deleted=Subscription deleted
+eventname.survey_report_viewed=Survey report viewed
+eventname.survey_response_submitted=Survey response submitted
+eventname.tag_added_to_an_item=Tag added to an item
+eventname.templates_viewed=Templates viewed
+eventname.template_updated=Template updated
+eventname.the_state_of_the_workflow_has_been_updated=The state of the workflow has been updated.
 eventname.the_status_of_the_submission_has_been_updated=The status of the submission has been updated.
 eventname.the_status_of_the_submission_has_been_viewed=The status of the submission has been viewed.
 eventname.the_submissions_have_been_locked_for_a_user=The submissions have been locked for a user.
@@ -238,17 +317,27 @@ eventname.the_submission_has_been_graded=The submission has been graded.
 eventname.the_user_has_accepted_the_statement_of_the_submission=The user has accepted the statement of the submission.
 eventname.tour_ended=Tour ended
 eventname.tour_started=Tour started
-eventname.txt_grade_exported=Txt grade exported
+eventname.txt_grade_exported=TXT grade exported
 eventname.unit_modified=Unit modified
+eventname.user_competency_rated_in_course=User competency rated in course.
+eventname.user_competency_viewed_in_a_course=User competency viewed in a course.
 eventname.user_enrolled_in_course=User enrolled in course
 eventname.user_graded=User graded
 eventname.user_list_viewed=User list viewed
 eventname.user_log_report_viewed=User log report viewed
 eventname.user_profile_viewed=User profile viewed
 eventname.user_report_viewed=User report viewed
+eventname.user_statistics_report_viewed=User statistics report viewed
 eventname.user_unenrolled_from_course=User unenrolled from course
-eventname.xls_grade_exported=Xls grade exported
-eventname.xml_grade_exported=Xml grade exported
+eventname.wiki_history_viewed=Wiki history viewed
+eventname.wiki_page_created=Wiki page created
+eventname.wiki_page_locks_deleted=Wiki page locks deleted
+eventname.wiki_page_map_viewed=Wiki page map viewed
+eventname.wiki_page_updated=Wiki page updated
+eventname.wiki_page_viewed=Wiki page viewed
+eventname.xls_grade_exported=XLS grade exported
+eventname.xml_grade_exported=XML grade exported
 eventname.zip_archive_of_folder_downloaded=Zip archive of folder downloaded
+
 
 
