--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -21,6 +21,8 @@ header.passwordChangedMessage=Se ha detectado que se ha cambiado la contraseña
 header.passwordDateTime=Fecha de la contraseña antigua: 
 label.oldPassword= Contraseña antigua: 
 
+component.component_not_available=Componente no disponible
+eventname.event_not_available=Evento no disponible
 
 label.loadingstudents=Calificaciones de alumnos cargadas: 
 label.of=de
@@ -91,17 +93,22 @@ chartlabel.atypicalValue=Valor Atipico
 chart.mean=Media
 
 
-component.component_not_available=Componente no disponible
-eventname.event_not_available=Evento no disponible
 
 
 
 component.activity_report=Informe de actividades
 component.assignment=Tarea
+component.book=Libro
+component.book_printing=Impresión de libros
 component.chat=Chat
 component.choice=Consulta
-component.course_participation=Course participation
+component.comments=Comentarios
+component.course_completion=Curso completado
+component.course_participation=Participación del curso
+component.database=Base de datos
+component.event_monitor=Monitor de eventos
 component.excel_spreadsheet=Hoja de cálculo de excel
+component.external_tool=Herramienta externa
 component.feedback=Encuesta
 component.file=Archivo
 component.file_submissions=Envíos de archivos
@@ -111,6 +118,9 @@ component.glossary=Glosario
 component.grader_report=Informe de calificaciones
 component.guia_docente=Guía docente
 component.hotpot_module=Hotpot module
+component.ims_content_package=Paquete de contenido IMS
+component.journal=Diario
+component.lesson=Lección
 component.live_logs=Registros activos
 component.logs=Registros
 component.online_text_submissions=Envíos de texto online
@@ -121,8 +131,11 @@ component.page=Página
 component.plain_text_file=Fichero de texto plano
 component.quiz=Cuestionario
 component.recycle_bin=Papelera de reciclaje
+component.scorm_package=Páquete SCORM
 component.single_view=Vista única
+component.statistics=Estadísticas
 component.submission_comments=Enviar comentarios
+component.survey=Encuesta
 component.system=Sistema
 component.turnitin_assignment_2=Turnitin assignment 2
 component.url=URL
@@ -132,25 +145,43 @@ component.wiki=Wiki
 component.workshop=Taller
 component.xml_file=Fichero xml
 
+
+
 eventname.activity_report_viewed=Informe de actividad visto
 eventname.add_submission=Agregar entrega
 eventname.all_the_submissions_are_being_downloaded=Todas las entregas están siendo descargadas.
+eventname.an_extension_has_been_granted=Se ha concedido una prórroga..
 eventname.an_online_text_has_been_uploaded=Se ha subido un texto en línea.
+eventname.assessment_evaluated=Evaluación evaluada
 eventname.assignment_override_created=Anulación de asignación creada
 eventname.assignment_override_deleted=Anulación de asignación eliminada
 eventname.assignment_override_updated=Anulación de asignación actualizada
 eventname.a_file_has_been_uploaded=Se ha subido un archivo.
 eventname.a_submission_has_been_submitted=Una presentación ha sido enviada.
+eventname.a_submission_has_been_uploaded=A submission has been uploaded.
 eventname.badge_listing_viewed=Listado de la insignia visto
+eventname.book_printed=Libro impreso
 eventname.calendar_event_created=Evento calendario creado
 eventname.calendar_event_deleted=Evento del calendario eliminado
 eventname.calendar_event_updated=Evento calendario actualizado
+eventname.calendar_subscription_updated=Calendar subscription updated
+eventname.category_has_been_created=Categoría ha sido creada
+eventname.chapter_created=Capítulo creado
+eventname.chapter_updated=Capítulo actualizado
+eventname.chapter_viewed=Capítulo visto
 eventname.choice_answer_added=Respuesta de elección añadida
+eventname.choice_made=Elección hecha
 eventname.choice_report_viewed=Informe de elección visto
+eventname.comments_viewed=Comentarios visto
 eventname.comment_created=Comentario creado
 eventname.comment_deleted=Comentario borrado
+eventname.completion_report_viewed=Informe completo visto
+eventname.content_page_viewed=Contenido de la página visto
 eventname.course_activity_completion_updated=Finalización de la actividad del curso actualizada.
 eventname.course_backup_created=Copia de seguridad del curso creado
+eventname.course_completed=Curso completado
+eventname.course_completion_updated=Curso completado actualizado
+eventname.course_content_deleted=Contenido del curso eliminado
 eventname.course_created=Curso creado
 eventname.course_module_created=Módulo de curso creado
 eventname.course_module_deleted=Módulo de curso eliminado
@@ -159,8 +190,10 @@ eventname.course_module_updated=Módulo de curso actualizado
 eventname.course_module_viewed=Módulo de curso visto
 eventname.course_reset_ended=Reinicio del curso finalizado
 eventname.course_reset_started=Reinicio del curso iniciado
+eventname.course_restored=Curso restaurado
 eventname.course_searched=Curso buscado
 eventname.course_section_created=Sección del curso creado
+eventname.course_section_deleted=Sección del curso eliminado
 eventname.course_section_updated=Sección del curso actualizada
 eventname.course_summary_viewed=Resumen del curso visto
 eventname.course_updated=Curso actualizado
@@ -169,14 +202,20 @@ eventname.course_viewed=Curso visto
 eventname.discussion_created=Discusión creada
 eventname.discussion_deleted=Discusión eliminada
 eventname.discussion_moved=Discusión movida
+eventname.discussion_pinned=Discusión fijada
 eventname.discussion_subscription_created=Suscripción de discusión creada
+eventname.discussion_subscription_deleted=Suscripción de discusión eliminada
 eventname.discussion_viewed=Discusión vista
 eventname.enrolment_instance_created=Instancia de inscripción creada
+eventname.enrolment_instance_updated=Instancia de inscripción actualizada
 eventname.entry_has_been_created=Se ha creado la entrada.
 eventname.entry_has_been_updated=La entrada ha sido actualizada.
 eventname.entry_has_been_viewed=Se ha visto la entrada.
 eventname.evaluation_system_created=Sistema de evaluación creado
 eventname.evaluation_system_modified=Sistema de evaluación modificado.
+eventname.evidence_created=Evidencia creada
+eventname.field_created=Campo creado
+eventname.field_updated=Campo actualizado
 eventname.folder_updated=Carpeta actualizada
 eventname.grader_report_viewed=Informe de nivelador visto
 eventname.grade_deleted=Grado eliminado
@@ -187,31 +226,49 @@ eventname.grade_user_report_viewed=Informe del usuario de grado visto
 eventname.grading_form_viewed=Forma de calificación vista
 eventname.grading_table_viewed=Tabla de clasificación vista
 eventname.grouping_created=Agrupación creada
+eventname.grouping_deleted=Agrupación eliminada
+eventname.group_assigned_to_grouping=Grupo asignado a la agrupación
 eventname.group_created=Grupo creado
 eventname.group_deleted=Grupo eliminado
 eventname.group_member_added=Miembro del grupo agregado
 eventname.group_member_removed=Miembro del grupo eliminado
+eventname.group_updated=Grupo actualizado
 eventname.hotpot_attempt_started=Intento de hotpot iniciado
 eventname.hotpot_attempt_submitted=Hotpot intento enviado
 eventname.item_created=Artículo creado
 eventname.item_deleted=Elemento eliminado
+eventname.item_restored=Item restaurado
+eventname.journal_entries_viewed=Entradas de diario vistas
+eventname.journal_entry_created=Entrada de diario creada
+eventname.journal_entry_updated=Entrada de diario actualizada
+eventname.lesson_ended=Lección terminada
+eventname.lesson_started=Lección empezado
 eventname.list_submissions=Enumerar las presentaciones
 eventname.live_log_report_viewed=Informe de registro en vivo visto
 eventname.log_report_viewed=Informe de registro visto
 eventname.message_sent=Mensaje enviado
+eventname.notes_viewed=Notas vistas
+eventname.note_created=Nota creada
 eventname.opendocument_grade_exported=Grado de opendocument exportado
 eventname.outline_report_viewed=Esquema de informe visto
 eventname.outstanding_ratings_modified=Calificaciones sobresalientes modificadas
+eventname.page_created=Página creada
+eventname.page_moved=Página movida
+eventname.page_updated=Página actualizada
 eventname.participation_report_viewed=Informe de participación visto
+eventname.phase_switched=Phase switched
 eventname.post_created=Mensaje creado
 eventname.post_deleted=Publicación eliminada
 eventname.post_updated=Publicación actualizada
+eventname.question_answered=Pregunta respondida
 eventname.question_category_created=Categoría de pregunta creada
 eventname.question_manually_graded=Pregunta calificada manualmente
+eventname.question_viewed=Pregunta vista
 eventname.quiz_attempt_abandoned=Prueba de intento abandonado
-eventname.quiz_attempt_preview_started=La vista previa del intento de prueba comenzó
-eventname.quiz_attempt_reviewed=Prueba de intento revisado
-eventname.quiz_attempt_started=El intento de prueba comenzó
+eventname.quiz_attempt_deleted=Intento de cuestionario eliminado
+eventname.quiz_attempt_preview_started=Vista previa del intento de prueba comenzado
+eventname.quiz_attempt_reviewed=Intento de cuestionario revisado
+eventname.quiz_attempt_started=Intento de cuestionario comenzado
 eventname.quiz_attempt_submitted=Prueba de intento enviado
 eventname.quiz_attempt_summary_viewed=Resumen del intento de prueba visto
 eventname.quiz_attempt_time_limit_exceeded=El límite de tiempo de intento de prueba superó
@@ -221,18 +278,39 @@ eventname.quiz_override_created=Anulación de la prueba creada
 eventname.quiz_override_deleted=Anulación de la prueba eliminada
 eventname.quiz_report_viewed=Informe de prueba visto
 eventname.recent_activity_viewed=Actividad reciente vista
+eventname.record_created=Registro creado
+eventname.record_deleted=Registro eliminado
+eventname.record_updated=Registro actualizado
 eventname.response_submitted=Respuesta enviada
 eventname.role_assigned=Rol asignado
+eventname.role_capabilities_updated=Permisos de rol actualizado
 eventname.role_unassigned=Rol sin asignar
+eventname.rule_created=Regla creado
 eventname.scale_created=Escala creada
+eventname.sco_launched=Sco iniciado
 eventname.sessions_viewed=Sesiones vistas
 eventname.some_content_has_been_posted=Algún contenido ha sido publicado.
 eventname.step_shown=Paso mostrado
 eventname.subject_modified=Sujeto modificado
+eventname.submission_assessed=Envío evaluado
 eventname.submission_confirmation_form_viewed=Formulario de confirmación de presentación visto.
 eventname.submission_created=Sumisión creada.
+eventname.submission_deleted=Envío eliminado
 eventname.submission_form_viewed=Formulario de envío visto.
+eventname.submission_reassessed=Envío reevaluado
 eventname.submission_updated=Envío actualizado.
+eventname.submission_viewed=Envío visto
+eventname.submitted_scorm_raw_score=Enviado puntuación SCORM
+eventname.submitted_scorm_status=Estado SCORM enviado
+eventname.subscribers_viewed=Suscriptores vistos
+eventname.subscription_created=Suscripción creada
+eventname.subscription_deleted=Suscripción eliminada
+eventname.survey_report_viewed=Informe de encuesta visto
+eventname.survey_response_submitted=Respuesta de encuesta enviada
+eventname.tag_added_to_an_item=Etiqueta añadida a un elemento
+eventname.templates_viewed=Plantillas vistas
+eventname.template_updated=Template updated
+eventname.the_state_of_the_workflow_has_been_updated=El estado del flujo de trabajo se ha actualizado
 eventname.the_status_of_the_submission_has_been_updated=El estado del envío ha sido actualizado.
 eventname.the_status_of_the_submission_has_been_viewed=El estado de la presentación ha sido visto.
 eventname.the_submissions_have_been_locked_for_a_user=Los envíos han sido bloqueados para un usuario.
@@ -243,16 +321,26 @@ eventname.tour_ended=El tour terminó
 eventname.tour_started=Gira iniciada
 eventname.txt_grade_exported=Frado txt exportado
 eventname.unit_modified=Unidad modificada
+eventname.user_competency_rated_in_course=User competency rated in course.
+eventname.user_competency_viewed_in_a_course=Competencia del usuario visto en un curso
 eventname.user_enrolled_in_course=Usuario matriculado en curso
 eventname.user_graded=Usuario calificado
 eventname.user_list_viewed=Lista de usuarios vistos
 eventname.user_log_report_viewed=Informe de registro de usuario visto
 eventname.user_profile_viewed=Perfil de usuario visto
 eventname.user_report_viewed=Informe de usuario visto
+eventname.user_statistics_report_viewed=User statistics report viewed
 eventname.user_unenrolled_from_course=Usuario no inscrito en el curso
+eventname.wiki_history_viewed=Historial de Wiki visto
+eventname.wiki_page_created=Página de wiki creada
+eventname.wiki_page_locks_deleted=Bloqueos de página wiki eliminados
+eventname.wiki_page_map_viewed=Wiki mapa de página visto
+eventname.wiki_page_updated=Página Wiki actualizado
+eventname.wiki_page_viewed=Página Wiki visto
 eventname.xls_grade_exported=Grado xls exportado
 eventname.xml_grade_exported=Grado xml exportado
 eventname.zip_archive_of_folder_downloaded=Archivo zip de la carpeta descargada
+
 
 
 
