Las medias de los log y maximos en funcion de si es profesor o alumno, añadido agrupar por horas y por dia de la semana, estos dos no usan el datepicker #53

--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -69,6 +69,8 @@ tab.component=Components
 tab.event=Events
 tab.grades=Grades
 choiceBox.DAY=Days
+choiceBox.HOUR=Hours
+choiceBox.DAY_OF_WEEK=Days of week
 choiceBox.YEAR=Years
 choiceBox.YEAR_WEEK=Weeks
 choiceBox.YEAR_QUARTER=Quarters
