--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -69,6 +69,8 @@ tab.grades=Calificaciones
 tab.component=Componentes
 tab.event=Eventos
 choiceBox.DAY=Días
+choiceBox.HOUR=Horas
+choiceBox.DAY_OF_WEEK=Días de la semana
 choiceBox.YEAR=Años
 choiceBox.YEAR_WEEK=Semanas
 choiceBox.YEAR_QUARTER=Trimestres
