Creado una nueva clase de informacion sobre la aplicacion y añadido un logger para los logs no validos

--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -33,7 +33,7 @@ label.savelocal=Saving in local...
 
 error.nocourse=You have to select a course.
 
-label.close=Close UBUGrades
+label.close=Close
 
 menu.file=File
 menu.changesubject=Change Subject
@@ -44,7 +44,7 @@ menu.exit=Exit
 menu.edit=Edit
 menu.clearselection=Clear selection
 menu.help=Help
-menu.about=About UBUGrades
+menu.about=About application
 
 label.group=Group:
 label.rol=Rol:
