--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -34,7 +34,7 @@ label.savelocal=Guardando en local...
 
 error.nocourse=Debe seleccionar un curso.
 
-label.close=Cerrar UBUGrades
+label.close=Cerrar
 
 menu.file=Archivo
 menu.changesubject=Cambiar Asignatura
@@ -45,7 +45,7 @@ menu.exit=Salir
 menu.edit=Editar
 menu.clearselection=Borrar selección
 menu.help=Ayuda
-menu.about=Acerca de UBUGrades
+menu.about=Acerca de la aplicación
 
 label.group=Grupo:
 label.rol=Rol:
@@ -139,7 +139,7 @@ component.plain_text_file=Fichero de texto plano
 component.quiz=Cuestionario
 component.recycle_bin=Papelera de reciclaje
 component.scorm_package=Páquete SCORM
-component.single_view=Vista única
+component.single_view=Vista simple
 component.statistics=Estadísticas
 component.submission_comments=Enviar comentarios
 component.survey=Encuesta
